--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
-apply plugin: 'java'
-apply plugin: 'application'
+group 'change'
+version '1.0-SNAPSHOT'
 
-archivesBaseName = "change-machine"
-version = '1.0'
-mainClassName = "App"
+apply plugin: 'java'
+
+sourceCompatibility = 1.8
 
 repositories {
   mavenCentral()
 }
 
 dependencies {
-  compile group: 'com.sparkjava', name: 'spark-core', version: '2.3'
-  testCompile group: 'junit', name: 'junit', version: '4.+'
-  compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
+  testCompile group: 'junit', name: 'junit', version: '4.12'
+  compile 'com.sparkjava:spark-core:2.6.0'
+  compile 'com.sparkjava:spark-template-handlebars:2.5.5'
+  compile 'org.slf4j:slf4j-simple:1.7.21' //to ensure easy to read logging.
 }
